--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
   },
   "homepage": "https://github.com/amandam2017/settings-bill-expressjs#readme",
   "devDependencies": {
-    "mocha": "^9.0.3"
-  },
-  "dependencies": {
+    "mocha": "^9.0.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2"
