--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "settings-bill-expressjs",
   "version": "1.0.0",
-  "description": "[![Build Status](https://travis-ci.org/amandam2017/settings-bill-expressjs.svg?branch=master)](https://travis-ci.org/amandam2017/settings-bill-expressjs)",
+  "description": "",
   "main": "settingsBill.js",
   "directories": {
     "test": "test"
