--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "settings-bill-expressjs",
   "version": "1.0.0",
-  "description": "",
+  "description": "[![Build Status](https://travis-ci.org/amandam2017/settings-bill-expressjs.svg?branch=master)](https://travis-ci.org/amandam2017/settings-bill-expressjs)",
   "main": "settingsBill.js",
   "directories": {
     "test": "test"
@@ -21,9 +21,7 @@
   },
   "homepage": "https://github.com/amandam2017/settings-bill-expressjs#readme",
   "devDependencies": {
-    "mocha": "^9.0.3",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "express-handlebars": "^5.3.2"
+    "mocha": "^9.0.3"
   }
+  
 }
